--- a/src/application/Sample.fxml
+++ b/src/application/Sample.fxml
@@ -17,7 +17,7 @@
             <Image url="@../../../../Users/Safranbolu78/Downloads/Brown%20Simple%20Elegant%20Coffee%20Shop%20Presentation%20(1).jpg" />
          </image>
       </ImageView>
-      <TabPane layoutX="355.0" layoutY="136.0" prefHeight="212.0" prefWidth="283.0" tabClosingPolicy="UNAVAILABLE">
+      <TabPane layoutX="355.0" layoutY="136.0" prefHeight="212.0" prefWidth="283.0" stylesheets="@application.css" tabClosingPolicy="UNAVAILABLE">
         <tabs>
           <Tab fx:id="tabadmin" text="Admin Giriş ">
             <content>
@@ -37,11 +37,12 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <Button layoutX="61.0" layoutY="103.0" mnemonicParsing="false" onAction="#btnmusterigiris" style="-fx-background-color: #C2A375;" text="Giriş Yap " />
-                        <Button layoutX="166.0" layoutY="103.0" mnemonicParsing="false" onAction="#btnkayitol" style="-fx-background-color: #C2A375;" text="Kayıt Ol " />
+                        <Button fx:id="btngiris" layoutX="61.0" layoutY="103.0" mnemonicParsing="false" onAction="#btnmusterigiris" style="-fx-background-color: #C2A375;" text="Giriş Yap " />
+                        <Button fx:id="btnkayıt" layoutX="166.0" layoutY="103.0" mnemonicParsing="false" onAction="#btnkayitol" style="-fx-background-color: #C2A375;" text="Kayıt Ol " />
                         <Label fx:id="lblmüsüterisifre" layoutX="24.0" layoutY="64.0" text="Şifre" />
                         <Label fx:id="lblmüsterigiris" layoutX="14.0" layoutY="18.0" text="Giriş Yap" />
-                        <PasswordField fx:id="musterigiris" layoutX="153.0" layoutY="159.0" prefHeight="26.0" prefWidth="136.0" />
+                        <PasswordField fx:id="musterigiris" layoutX="91.0" layoutY="51.0" prefHeight="26.0" prefWidth="152.0" />
+                        <TextField fx:id="txtfieldgiris1" layoutX="89.0" layoutY="14.0" promptText="Kullanıcı Adını Giriniz" />
                      </children>
                   </AnchorPane>
             </content>
