--- a/src/application/menü.fxml
+++ b/src/application/menü.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -34,10 +36,16 @@
             <Font name="System Bold" size="15.0" />
          </font>
       </Button>
-      <Text fx:id="txtSonuc" layoutX="284.0" layoutY="340.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="60.79996337890634">
+      <Text fx:id="txtSonuc" layoutX="277.0" layoutY="353.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
          <font>
             <Font size="25.0" />
          </font></Text>
-      <Button fx:id="siparişVer" layoutX="369.0" layoutY="331.0" mnemonicParsing="false" onAction="#btnsiparisVer" text="Sipariş Ver" />
+      <Button fx:id="siparişVer" layoutX="409.0" layoutY="330.0" mnemonicParsing="false" onAction="#btnsiparisVer" text="Sipariş Ver" />
+      <Label fx:id="txtürün" layoutX="39.0" layoutY="332.0" text="ürün">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <TextField fx:id="kullaniciadi" layoutX="3.0" layoutY="327.0" prefHeight="31.0" prefWidth="102.0" promptText="kullanıcı adı" />
    </children>
 </AnchorPane>
