--- a/src/application/fiş.fxml
+++ b/src/application/fiş.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="321.0" prefWidth="294.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.fişController">
@@ -22,11 +23,17 @@
       <Text fx:id="ürün3" layoutX="68.0" layoutY="166.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
       <Text fx:id="ürün4" layoutX="68.0" layoutY="203.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
       <Text fx:id="toplam" layoutX="59.0" layoutY="241.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Toplam" />
-      <Text fx:id="txtisim" layoutX="150.0" layoutY="18.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+      <Text fx:id="txtisim" layoutX="150.0" layoutY="20.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+         <font>
+            <Font size="16.0" />
+         </font></Text>
       <Text fx:id="fiyat1" layoutX="202.0" layoutY="93.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
       <Text fx:id="fiyat2" layoutX="202.0" layoutY="131.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
       <Text fx:id="fiyat3" layoutX="202.0" layoutY="166.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
       <Text fx:id="fiyat4" layoutX="202.0" layoutY="203.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
-      <Text fx:id="toplamfiyat" layoutX="202.0" layoutY="241.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+      <Text fx:id="toplamfiyat" layoutX="192.0" layoutY="244.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font></Text>
    </children>
 </AnchorPane>
