--- a/src/application/müsteri.fxml
+++ b/src/application/müsteri.fxml
@@ -18,7 +18,7 @@
             <Image url="@../../../../Users/Safranbolu78/Downloads/Brown%20Retro%20Vintage%20Cafe%20and%20Restaurant%20Label%20Logo/1.png" />
          </image>
       </ImageView>
-      <TextField fx:id="txt_id" layoutX="7.0" layoutY="29.0" onAction="#txt_arama_action" onKeyPressed="#txt_arama_KeyPressed" prefHeight="26.0" prefWidth="226.0" promptText="Aranacak metin veya kullanılacak metin" />
+
       <ComboBox fx:id="combouser" layoutX="86.0" layoutY="92.0" onAction="#combouser" prefWidth="150.0" />
       <Label layoutX="14.0" layoutY="96.0" text="Kullanıcı " />
       <DatePicker fx:id="datebitis" layoutX="324.0" layoutY="56.0" prefHeight="26.0" prefWidth="150.0" />
@@ -35,5 +35,6 @@
             <TableColumn fx:id="columnTarih" minWidth="0.0" prefWidth="90.39999999999998" text="Tarih" />
         </columns>
       </TableView>
+      <TextField fx:id="txt_arama" layoutX="26.0" layoutY="31.0" onAction="#txt_arama_action" onKeyPressed="#txt_arama_KeyPressed" promptText="Aranacak metni giriniz" />
    </children>
 </AnchorPane>
