--- a/src/application/ürüngrafiği.fxml
+++ b/src/application/ürüngrafiği.fxml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.chart.PieChart?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="300.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ürüngrafiğiController">
    <children>
@@ -13,7 +15,15 @@
          </image>
       </ImageView>
       <PieChart fx:id="ürünGrafiği" layoutX="86.0" layoutY="27.0" prefHeight="246.0" prefWidth="357.0" title="Ürün Grafik Tablosu" />
+      <Button fx:id="geri" layoutX="-5.0" layoutY="14.0" mnemonicParsing="false" onAction="#btngeri" prefHeight="26.0" prefWidth="50.0" style="-fx-background-color: #593B1D;" text="Geri" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Button>
+      <ImageView fx:id="imageView" fitHeight="78.0" fitWidth="110.0" layoutX="444.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../Users/Safranbolu78/Desktop/logo.jpg" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
-
-
